Added missing APIs
